# Developing-IoT-Projects-with-ESP32-2nd-edition

./: .gitignore  .gitmodules  README.md
ch12/baby_monitor/main/: AppAudio.hpp  AppMem.hpp  AppRmaker.hpp  CMakeLists.txt  main.cpp
ch4/flatbuffers_ex/components/flatbuffers/: CMakeLists.txt
ch5/audio_player/main/: AppAudio.hpp  AppButton.hpp  AppNav.hpp  AppUi.hpp  CMakeLists.txt  audio_player.cpp  ui.c  ui.h  ui_events.c  ui_helpers.c  ui_helpers.h  ui_img_1258062811.c  ui_img_1258080204.c  ui_img_1310788941.c  ui_img_1310804284.c  ui_img_1552218578.c  ui_img_1552235971.c  ui_img_603081905.c  ui_img_603097248.c
ch8/common/esp-aws-iot/libraries/backoffAlgorithm/backoffAlgorithm/test/: CMakeLists.txt
ch8/common/esp-aws-iot/libraries/backoffAlgorithm/backoffAlgorithm/test/unit-test/: CMakeLists.txt  backoff_algorithm_utest.c  catch_assert.h
ch8/common/esp-aws-iot/libraries/coreJSON/coreJSON/test/: CMakeLists.txt
ch8/common/esp-aws-iot/libraries/coreJSON/coreJSON/test/cbmc/: .gitignore
ch8/common/esp-aws-iot/libraries/coreJSON/coreJSON/test/cbmc/include/: core_json_annex.h  skipGeneric.h
ch8/common/esp-aws-iot/libraries/coreJSON/coreJSON/test/cbmc/proofs/: Makefile  Makefile-json.common  Makefile-project-defines  Makefile-project-targets
ch8/common/esp-aws-iot/libraries/coreJSON/coreJSON/test/cbmc/proofs/JSON_Iterate/: JSON_Iterate_harness.c  Makefile  README.md  cbmc-viewer.json
ch8/common/esp-aws-iot/libraries/coreJSON/coreJSON/test/cbmc/proofs/JSON_Search/: JSON_Search_harness.c  Makefile  README.md  cbmc-viewer.json
ch8/common/esp-aws-iot/libraries/coreJSON/coreJSON/test/cbmc/proofs/JSON_Validate/: JSON_Validate_harness.c  Makefile  cbmc-viewer.json
ch8/common/esp-aws-iot/libraries/coreJSON/coreJSON/test/cbmc/proofs/skipAnyLiteral/: Makefile  cbmc-viewer.json  skipAnyLiteral_harness.c
ch8/common/esp-aws-iot/libraries/coreJSON/coreJSON/test/cbmc/proofs/skipCollection/: Makefile  cbmc-viewer.json  skipCollection_harness.c
ch8/common/esp-aws-iot/libraries/coreJSON/coreJSON/test/cbmc/proofs/skipEscape/: Makefile  README.md  cbmc-viewer.json  skipEscape_harness.c
ch8/common/esp-aws-iot/libraries/coreJSON/coreJSON/test/cbmc/proofs/skipNumber/: Makefile  README.md  cbmc-viewer.json  skipNumber_harness.c
ch8/common/esp-aws-iot/libraries/coreJSON/coreJSON/test/cbmc/proofs/skipSpace/: Makefile  cbmc-viewer.json  skipSpace_harness.c
ch8/common/esp-aws-iot/libraries/coreJSON/coreJSON/test/cbmc/proofs/skipSpaceAndComma/: Makefile  cbmc-viewer.json  skipSpaceAndComma_harness.c
ch8/common/esp-aws-iot/libraries/coreJSON/coreJSON/test/cbmc/proofs/skipString/: Makefile  cbmc-viewer.json  skipString_harness.c
ch8/common/esp-aws-iot/libraries/coreJSON/coreJSON/test/cbmc/proofs/skipUTF8/: Makefile  cbmc-viewer.json  skipUTF8_harness.c
ch8/common/esp-aws-iot/libraries/coreJSON/coreJSON/test/cbmc/stubs/: skipAnyLiteral.c  skipAnyScalar.c  skipCollection.c  skipDigits.c  skipEscape.c  skipGeneric.c  skipNumber.c  skipSpace.c  skipSpaceAndComma.c  skipString.c  skipUTF8.c
ch8/common/esp-aws-iot/libraries/coreJSON/coreJSON/test/unit-test/: CMakeLists.txt  catch_assert.h  core_json_utest.c  unity_build.cmake
ch8/common/esp-aws-iot/libraries/corePKCS11/corePKCS11/test/: CMakeLists.txt
ch8/common/esp-aws-iot/libraries/corePKCS11/corePKCS11/test/cbmc/include/: core_pkcs11_config.h  mbedtls_config.h  pkcs11_interface_stubs.h
ch8/common/esp-aws-iot/libraries/corePKCS11/corePKCS11/test/cbmc/proofs/: Makefile-project-defines  Makefile-template-defines
ch8/common/esp-aws-iot/libraries/corePKCS11/corePKCS11/test/cbmc/proofs/C_CloseSession/: C_CloseSession_harness.c  Makefile
ch8/common/esp-aws-iot/libraries/corePKCS11/corePKCS11/test/cbmc/proofs/C_CreateObject/: C_CreateObject_harness.c  Makefile
ch8/common/esp-aws-iot/libraries/corePKCS11/corePKCS11/test/cbmc/proofs/C_DestroyObject/: C_DestroyObject_harness.c  Makefile
ch8/common/esp-aws-iot/libraries/corePKCS11/corePKCS11/test/cbmc/proofs/C_DigestFinal/: C_DigestFinal_harness.c  Makefile
ch8/common/esp-aws-iot/libraries/corePKCS11/corePKCS11/test/cbmc/proofs/C_DigestInit/: C_DigestInit_harness.c  Makefile
ch8/common/esp-aws-iot/libraries/corePKCS11/corePKCS11/test/cbmc/proofs/C_DigestUpdate/: C_DigestUpdate_harness.c  Makefile
ch8/common/esp-aws-iot/libraries/corePKCS11/corePKCS11/test/cbmc/proofs/C_Finalize/: C_Finalize_harness.c  Makefile
ch8/common/esp-aws-iot/libraries/corePKCS11/corePKCS11/test/cbmc/proofs/C_FindObjects/: C_FindObjects_harness.c  Makefile
ch8/common/esp-aws-iot/libraries/corePKCS11/corePKCS11/test/cbmc/proofs/C_FindObjectsFinal/: C_FindObjectsFinal_harness.c  Makefile
ch8/common/esp-aws-iot/libraries/corePKCS11/corePKCS11/test/cbmc/proofs/C_FindObjectsInit/: C_FindObjectsInit_harness.c  Makefile
ch8/common/esp-aws-iot/libraries/corePKCS11/corePKCS11/test/cbmc/proofs/C_GenerateKeyPair/: C_GenerateKeyPair_harness.c  Makefile
ch8/common/esp-aws-iot/libraries/corePKCS11/corePKCS11/test/cbmc/proofs/C_GenerateRandom/: Makefile  (+1 more)
ch8/common/esp-aws-iot/libraries/corePKCS11/corePKCS11/test/cbmc/stubs/: core_pkcs11_pal_stubs.c  core_pki_utils_stubs.c  mbedtls_stubs.c  pkcs11_interface_stubs.c
ch8/common/esp-aws-iot/libraries/corePKCS11/corePKCS11/test/coverity_analysis/: CMakeLists.txt
ch8/common/esp-aws-iot/libraries/corePKCS11/corePKCS11/test/include/: core_pkcs11_config.h  logging_levels.h  logging_stack.h  malloc_stub.h  mock_osal.h  pkcs11_defs.h
ch8/common/esp-aws-iot/libraries/corePKCS11/corePKCS11/test/mbedtls_integration/: CMakeLists.txt  core_pkcs11_config.h  core_pkcs11_mbedtls_config.yml  core_pkcs11_test_config.h  mbedtls_integration_test.c
ch8/common/esp-aws-iot/libraries/corePKCS11/corePKCS11/test/pkcs11_mbedtls_utest/: CMakeLists.txt  core_pkcs11_mbedtls_config.yml  core_pkcs11_mbedtls_utest.c
ch8/common/esp-aws-iot/libraries/corePKCS11/corePKCS11/test/pkcs11_utils_utest/: CMakeLists.txt  pkcs11_utils_utest.c
ch8/common/esp-aws-iot/libraries/corePKCS11/corePKCS11/test/wrapper_utest/: CMakeLists.txt  core_pkcs11_utest.c  wrapper_utest_config.yml
(+2574 files in other folders)
